Image section overflow bug fixed, README.md updated

--- a/css/laptop.css
+++ b/css/laptop.css
@@ -62,7 +62,6 @@
 .main-section .transform,
 .main-section .stand {
     height: auto;
-    padding: 100px 190px;
     text-align: start;
     order: 1;
 }
@@ -87,7 +86,6 @@
 }
 .main-section .image-background p {
     transform: translate(0, 310px);
-    padding: 45px 275px;
     font-size: 1.7rem;
 }
 .main-section .cherry-background {
@@ -120,7 +118,6 @@
 }
 .testimonial-container {
     height: 650px;
-    padding: 100px 200px;
 }
 .testimonial-container .testimonial-title {
     padding: 25px 0;
@@ -149,7 +146,7 @@
     grid-auto-rows: auto;
 }
 .image-section .image {
-    width: 25vw;
+    width: 100%;
     height: 30vh;
     object-position: center;
     object-fit: cover;
