--- a/css/tablet.css
+++ b/css/tablet.css
@@ -85,7 +85,7 @@
     grid-auto-rows: auto;
 }
 .image-section .image {
-    width: 25vw;
+    width: 100%;
     height: 30vh;
     object-position: center;
     object-fit: cover;
